--- a/index.html
+++ b/index.html
@@ -47,24 +47,34 @@
   </section>
 
   <!-- Projects gallery -->
-  <section id="work" class="projects container">
-    <h3>Recent projects</h3>
+  <section id="work" class="projects">
+    <div class="container">
+      <h3>Recent projects</h3>
+    </div>
     <div class="grid">
       <figure class="project">
-        <img src="assets/images/project-1.jpg" alt="Project 1" />
+        <img src="assets/images/project-1.jpg" alt="Project 1" loading="lazy" />
         <figcaption>Vaucluse Duplex</figcaption>
       </figure>
       <figure class="project">
-        <img src="assets/images/project-2.jpg" alt="Project 2" />
+        <img src="assets/images/project-2.jpg" alt="Project 2" loading="lazy" />
         <figcaption>Cronulla House</figcaption>
       </figure>
       <figure class="project">
-        <img src="assets/images/project-3.jpg" alt="Project 3" />
+        <img src="assets/images/project-3.jpg" alt="Project 3" loading="lazy" />
         <figcaption>Sylvania Waters House</figcaption>
       </figure>
       <figure class="project">
-        <img src="assets/images/project-4.jpg" alt="Project 4" />
+        <img src="assets/images/project-4.jpg" alt="Project 4" loading="lazy" />
         <figcaption>Queensland Residence</figcaption>
+      </figure>
+      <figure class="project">
+        <img src="assets/images/project-1.jpg" alt="Project 5" loading="lazy" />
+        <figcaption>Modern Villa</figcaption>
+      </figure>
+      <figure class="project">
+        <img src="assets/images/project-2.jpg" alt="Project 6" loading="lazy" />
+        <figcaption>Coastal Retreat</figcaption>
       </figure>
     </div>
   </section>
