Add separate file for each project
Add separate file for each project

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
       <h3>Recent projects</h3>
     </div>
     <div class="grid">
-      <figure class="project">
-        <img src="assets/images/project-1.jpg" alt="Project 1" loading="lazy" />
+      <figure class="project" data-project="vaucluse-duplex">
+        <img src="assets/images/project-1.jpg" alt="Vaucluse Duplex" loading="lazy" />
         <figcaption>Vaucluse Duplex</figcaption>
       </figure>
-      <figure class="project">
-        <img src="assets/images/project-2.jpg" alt="Project 2" loading="lazy" />
+      <figure class="project" data-project="cronulla-house">
+        <img src="assets/images/project-2.jpg" alt="Cronulla House" loading="lazy" />
         <figcaption>Cronulla House</figcaption>
       </figure>
-      <figure class="project">
-        <img src="assets/images/project-3.jpg" alt="Project 3" loading="lazy" />
+      <figure class="project" data-project="sylvania-waters-house">
+        <img src="assets/images/project-3.jpg" alt="Sylvania Waters House" loading="lazy" />
         <figcaption>Sylvania Waters House</figcaption>
       </figure>
-      <figure class="project">
-        <img src="assets/images/project-4.jpg" alt="Project 4" loading="lazy" />
+      <figure class="project" data-project="queensland-residence">
+        <img src="assets/images/project-4.jpg" alt="Queensland Residence" loading="lazy" />
         <figcaption>Queensland Residence</figcaption>
       </figure>
-      <figure class="project">
-        <img src="assets/images/project-1.jpg" alt="Project 5" loading="lazy" />
+      <figure class="project" data-project="modern-villa">
+        <img src="assets/images/project-1.jpg" alt="Modern Villa" loading="lazy" />
         <figcaption>Modern Villa</figcaption>
       </figure>
-      <figure class="project">
-        <img src="assets/images/project-2.jpg" alt="Project 6" loading="lazy" />
+      <figure class="project" data-project="coastal-retreat">
+        <img src="assets/images/project-2.jpg" alt="Coastal Retreat" loading="lazy" />
         <figcaption>Coastal Retreat</figcaption>
       </figure>
     </div>
