Updated the Logo
Updated the Logo

--- a/cronulla-house.html
+++ b/cronulla-house.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cronulla House - D.G. Design Studio</title>
+  <title>Hivecraft Studio</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/project-details.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="D.G. Design Studio logo" /></a>
+      <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="Hivecraft Studio" /></a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
           <li><a href="index.html#home">Home</a></li>
@@ -90,7 +90,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <small>© <span id="year"></span> D.G. Design Studio</small>
+        <small>© <span id="year"></span>Hivecraft Studio</small>
       </div>
       <div class="footer-right">
         <nav>
