--- a/modern-villa.html
+++ b/modern-villa.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Modern Villa - D.G. Design Studio</title>
+  <title>Hivecraft Studio</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/project-details.css" />
 </head>
@@ -90,7 +90,7 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-left">
-        <small>© <span id="year"></span> D.G. Design Studio</small>
+        <small>© <span id="year"></span>Hivecraft Studio</small>
       </div>
       <div class="footer-right">
         <nav>
