--- a/modern-villa.html
+++ b/modern-villa.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Hivecraft Studio</title>
+  <title>Modern Villa - Hivecraft Studio</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/project-details.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="D.G. Design Studio logo" /></a>
+      <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="Hivecraft Studio" /></a>
       <nav class="main-nav" aria-label="Main navigation">
         <ul>
           <li><a href="index.html#home">Home</a></li>
