--- a/sylvania-waters-house.html
+++ b/sylvania-waters-house.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Hivecraft Studio</title>
+  <title>Sylvania Waters House - Hivecraft Studio</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/project-details.css" />
 </head>
